[package]
name = "rust-hello"
version = "0.1.0"
authors = ["alex <jipings@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpmock = "0.6"
isahc = "1.4"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4"


[dev-dependencies]
