[package]
name = "rust-hello"
version = "0.1.0"
authors = ["alex <jipings@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpmock = "0.6"
isahc = "1.4"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.68"
chrono = "0.4"
img_hash = "3.2.0"
image = "0.23.14"
rodio = "0.14.0"
thiserror = "1.0.30"
anyhow = "1.0.44"
shaku = "0.6.1"

[dev-dependencies]
